<?xml version="1.0"?>
<package>
  <name>hrov_arm_control</name>
  <version>0.0.0</version>
  <description>The hrov_arm_control controls when the arm should operate as autonomous or teleoperated.</description>
  <maintainer email="garciaju@uji.es">Juan Carlos Garcia</maintainer>
  <license>BSD</license>
  <author email="garciaju@uji.es">Juan Carlos Garcia</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>mar_robot_arm5e</build_depend>  
  <build_depend>visp</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>mar_robot_arm5e</run_depend>  
  <run_depend>visp</run_depend>

</package>
